test push files

--- a/src/screens/index.html
+++ b/src/screens/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>test</title>
+  <title>Colors App</title>
+  <link href="../scss/style.scss"  rel="stylesheet">
+  <link href="../scss/reset.scss"  rel="stylesheet">
 </head>
 <body>
-  <h1>Hello</h1>
+  
 </body>
+<script src="../js/main.js"></script>
 </html>
