--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -30,7 +30,7 @@
             <h1 class="category__title">Découvertes de la semaine</h1>
             <img  src="../img/Plus.svg" class="category__plus">
           </div></a>
-          <img class="category__background" src="../img/Découvertes-home.png" alt="discover">
+          <img class="category__background" src="" alt="discover">
         </article>
 
         <article class="category" width="358px" height="153px">
