--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -17,10 +17,10 @@
 
     <div class="menu" id="menu">
       <div class="menu__header">
-        <a href="../screens/home.html" >
+        <a href="" >
         <img src="../img/Logo home.svg"  class="home" id="home" alt="Home"/>
       </a>
-      <a href="../screens/account.html" >
+      <a href="" >
         <img src="../img/account.svg">
       </a>
       </div>
@@ -34,7 +34,7 @@
         </article>
 
         <article class="category" width="358px" height="153px">
-          <a href="../screens/favoritetitles.html"><div class="category__content">
+          <a href=""><div class="category__content">
           <h1 class="category__title">Vos titres favoris</h1>
           <img src="../img/Plus.svg" class="category__plus">
           </div></a> 
@@ -42,7 +42,7 @@
         </article>
 
         <article class="category" width="358px" height="153px">
-          <a href="../screens/favorite-artist.html"><div class="category__content">
+          <a href=""><div class="category__content">
           <h1 class="category__title">Vos artistes favoris</h1>
           <img class="category__plus" src="../img/Plus.svg">
           </div></a>
@@ -50,7 +50,7 @@
         </article>
 
         <article class="category" width="358px" height="153px">
-          <a href="../screens/divers.html"><div class="category__content">
+          <a href=""><div class="category__content">
           <h1 class="category__title">Divers</h1>
           <img class="category__plus" src="../img/Plus.svg">
           </div></a>
