--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -26,7 +26,7 @@
       </div>
       <section class="menu__choices">
         <article class="category" width="358px" height="153px">
-          <a href=""><div class="category__content">
+          <a href="../screens/discover.html"><div class="category__content">
             <h1 class="category__title">Découvertes de la semaine</h1>
             <img  src="../img/Plus.svg" class="category__plus">
           </div></a>
