--- a/src/screens/discover.html
+++ b/src/screens/discover.html
@@ -11,7 +11,7 @@
   <div class="menu">
     <div class="menu__header">
       <a href="../screens/home.html"><img src="../img/Logo home.svg" class="home" id="home"></a>
-      <a href=""><img src="../img/account.svg"></a>
+      <a href="../screens/account.html"><img src="../img/account.svg"></a>
     </div>
   <div class="category">
     <article class="category">
