--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -20,7 +20,7 @@
         <a href="" >
         <img src="../img/Logo home.svg"  class="home" id="home" alt="Home"/>
       </a>
-      <a href="" >
+      <a href="../screens/account.html" >
         <img src="../img/account.svg">
       </a>
       </div>
