--- a/src/screens/discover.html
+++ b/src/screens/discover.html
@@ -22,7 +22,7 @@
           <img class="category__spotify--logo" src="../img/spotify.svg">
         </div>
       </div>
-      <img src="" class="category__background">
+      <img src="../img/découvertes.png" class="category__background">
     </article>
   </div>
 
