--- a/src/screens/favoritetitles.html
+++ b/src/screens/favoritetitles.html
@@ -79,6 +79,54 @@
       </div>
     </article>
 
+    <article class="songs">
+      <img src="../img/Artist-1.png" alt="artist-1">
+      <div class="songs__info">
+      <h1>Artist</h1>
+      <p>Name of the song</p>
+      </div>
+      <div class="songs__options">
+        <img class="song__options--like" src="../img/heart.svg" alt="like">
+        <img src="../img/Plus.svg" alt="plus">
+      </div>
+    </article>
+
+    <article class="songs">
+      <img src="../img/Artist-3.png" alt="artist-2">
+      <div class="songs__info">
+      <h1>Artist</h1>
+      <p>Name of the song</p>
+      </div>
+      <div class="songs__options">
+        <img class="song__options--like" src="../img/heart.svg" alt="like">
+        <img src="../img/Plus.svg" alt="plus">
+      </div>
+    </article>
+
+    <article class="songs">
+      <img src="../img/Artist-4.png" alt="artist-3">
+      <div class="songs__info">
+      <h1>Artist</h1>
+      <p>Name of the song</p>
+      </div>
+      <div class="songs__options">
+        <img class="song__options--like" src="../img/heart.svg" alt="plus">
+        <img src="../img/Plus.svg" alt="plus">
+      </div>
+    </article>
+
+    <article class="songs">
+      <img src="../img/Artist-1.png" alt="artist-4">
+      <div class="songs__info">
+      <h1>Artist</h1>
+      <p>Name of the song</p>
+      </div>
+      <div class="songs__options">
+        <img class="song__options--like" src="../img/heart.svg" alt="like">
+        <img src="../img/Plus.svg" alt="plus">
+      </div>
+    </article>
+
     
   </div>
 </body>
