--- a/src/screens/favorite-artist.html
+++ b/src/screens/favorite-artist.html
@@ -40,8 +40,9 @@
         <img src="../img/spotify.svg" alt="spotify">
       </div>
       <div class="arrow">
-        <img id="arrow-left" src="../img/arrow-left.svg" alt="arrow-left">
-        <img id="arrow-right" src="../img/arrow-right.svg" alt="arrow-right">
+        <img class = "arrow__left" id="arrow-left" src="../img/arrow-left.svg" alt="arrow-left">
+        <img class = "arrow__left2" id="arrow-left2" src="../img/arrow-left.svg" alt="arrow-left2">
+        <img c id="arrow-right" src="../img/arrow-right.svg" alt="arrow-right">
         <img class ="arrow__right2--before" id="arrowRight2" src="../img/arrow-right2.svg">
       </div>
     </div>
