--- a/src/screens/divers.html
+++ b/src/screens/divers.html
@@ -14,7 +14,7 @@
       <a href="../screens/account.html"><img src="../img/account.svg"></a>
     </div>
   <h1 class="title-page">Divers</h1>
-  <img src="../img/Divers.png" alt="colors-headphone">
+  <img class="headphones"src="../img/Divers.png" alt="colors-headphone">
 
   <article class="main-article">
     <h1 class="main-article__title">COLORS sell his famous headphone</h1>
