--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -11,6 +11,7 @@
 
   <div class="container" id="container">
       <img src="../img/Logo home.svg" class="logo">
+      <p class="advice">For a better experience use the inspector in mobile mode </p>
       <img src="../img/Swipe.svg" class="swipe" id="swipe">
   </div>
 
